k8s/deployment-admin-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-backend
  namespace: elbatt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-backend
  template:
    metadata:
      labels:
        app: admin-backend
    spec:
      containers:
        - name: admin-backend
          image: rg.fr-par.scw.cloud/elbatt/admin-backend:12572ff4
          ports:
            - containerPort: 8002
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "150m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 15
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /health
              port: 8002
            failureThreshold: 30
            periodSeconds: 2
