k8s/deployment-admin-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-frontend
  namespace: elbatt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-frontend
  template:
    metadata:
      labels:
        app: admin-frontend
    spec:
      containers:
        - name: admin-frontend
          image: rg.fr-par.scw.cloud/elbatt/admin-frontend:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: "20m"
              memory: "64Mi"
            limits:
              cpu: "50m"
              memory: "128Mi"
