k8s/deployment-chatbot-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-frontend
  namespace: elbatt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot-frontend
  template:
    metadata:
      labels:
        app: chatbot-frontend
    spec:
      containers:
        - name: chatbot-frontend
          image: rg.fr-par.scw.cloud/elbatt/chatbot-frontend:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: "20m"
              memory: "64Mi"
            limits:
              cpu: "50m"
              memory: "128Mi"
